# tokenscope

./: .gitignore  PRD.md  README-zh.md  README.md  Tokenscope 菜单栏面板.html  index.html  package.json  pnpm-lock.yaml  tokenscope-panel.html  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: BUGFIXES.md  REVIEW.md
public/: confetti.html
scripts/: gen_icon.py
src/: App.tsx  charts.tsx  data.ts  i18n.ts  main.tsx  setting.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  model.rs  parser.rs  pricing.rs  store.rs
