[package]
name = "tokenscope"
version = "1.0.1"
description = "Claude CLI token usage dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "tokenscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
# decode the base64 PNG body of a screenshot data URL (see save_screenshot)
base64 = "0.22"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
# watch ~/.claude/projects so the dashboard refreshes within ~1s of a log write
notify = "6"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
